[package]
name = "slik"
version = "0.1.0"
edition = "2021"
description = "A motion.dev-inspired animation framework for Leptos"
license = "MIT"
readme = "../../README.md"
homepage = "https://wavyte.com"
keywords = ["leptos", "animation", "spring", "motion", "wasm"]

[package.metadata.docs.rs]
all-features = true

[dependencies]
leptos = { version = "0.8" }
web-sys = { version = "0.3", features = [
    "Document",
    "Element",
    "Window",
    "Event",
    "EventTarget",
    "HtmlElement",
    "SvgElement",
    "CssStyleDeclaration",
    "MediaQueryList",
    "MediaQueryListEvent",
] }
wasm-bindgen = "0.2"
js-sys = "0.3"

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3"
wasm-bindgen-futures = "0.4"

[profile.dev]
debug = 0

[features]
csr = ["leptos/csr"]
hydrate = ["leptos/hydrate"]
ssr = ["leptos/ssr"]
