[package]
name = "slik"
version = "0.2.0"
edition = "2021"
description = "A binder-first Motion-inspired animation framework for Leptos"
license = "MIT"
readme = "../../README.md"
homepage = "https://wavyte.com"
repository = "https://github.com/Wavyte/slik"
keywords = ["leptos", "animation", "spring", "motion", "wasm"]

[package.metadata.docs.rs]
all-features = true

[dependencies]
leptos = { version = "0.8" }
web-sys = { version = "0.3", features = [
    "Document",
    "Element",
    "Window",
    "Event",
    "EventTarget",
    "HtmlElement",
    "SvgElement",
    "CssStyleDeclaration",
    "MediaQueryList",
    "MediaQueryListEvent",
] }
wasm-bindgen = "0.2"
js-sys = "0.3"

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3"
wasm-bindgen-futures = "0.4"

[features]
csr = ["leptos/csr"]
hydrate = ["leptos/hydrate"]
ssr = ["leptos/ssr"]
